--- a/Assignments/A1/Untitled.ipynb
+++ b/Assignments/A1/Untitled.ipynb
@@ -90,10 +90,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn import datasets, linear_model\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "def LRGradDesc(x_train, y_train, x_test, y_test):\n",
+    "    regr = linear_model.LinearRegression()\n",
+    "    regr.fit(x_train, y_train)\n",
+    "\n",
+    "    N = len(x_train.iloc[:, 0])\n",
+    "    prediction = regr.predict(x_test)\n",
+    "    diff = np.divide(prediction - y_train, y_train)\n",
+    "    cost = np.sum(diff ** 2) / (2. * N)\n",
+    "    # The coefficients\n",
+    "    print(\"Cost: %.2f\" % cost)\n",
+    "    print('Coefficients: \\n', regr.coef_)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    data_train = pd.read_csv(\"data-sets/housing-prices-dataset/train.csv\", usecols=[43,44,80])\n",
+    "    LRGradDesc(data_train.iloc[:,:2], data_train.iloc[:,2], data_train.iloc[:,:2], data_train.iloc[:,2])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# 1c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I found the best case for learning rates to be 0.001 for w and 0.1 for b"
    ]
   },
   {
