--- a/Assignments/A2/Question 2.ipynb
+++ b/Assignments/A2/Question 2.ipynb
@@ -310,6 +310,113 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/radbrad/.local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/home/radbrad/.local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/home/radbrad/.local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/home/radbrad/.local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/home/radbrad/.local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/home/radbrad/.local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "    Multi-class classifier w/ neural nets\n",
+    "'''\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from tensorflow.keras.datasets import reuters\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.layers import Dropout\n",
+    "from tensorflow.keras import regularizers\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "from tensorflow.keras import backend as K\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def vectorize_sequences(sequences, dimension=10000):\n",
+    "    results = np.zeros((len(sequences), dimension))\n",
+    "    for i,sequence in enumerate(sequences):\n",
+    "        results[i,sequence] = 1\n",
+    "    return results\n",
+    "\n",
+    "def trainModel(X_train, y_train, X_val, y_val, hidden_layers = 3, hidden_nodes = 200, learning_rate = 0.001, epochs = 20, l2=False, dropout=False):\n",
+    "\n",
+    "    model = Sequential()\n",
+    "    if dropout:\n",
+    "        model.add(Dropout(0.1, input_shape=(10000,)))\n",
+    "    else:\n",
+    "        model.add(Dense(64, activation='relu', input_shape=(10000,)))\n",
+    "\n",
+    "    for i in range(hidden_layers):\n",
+    "        if l2:\n",
+    "            model.add(Dense(hidden_nodes, activation='relu', kernel_regularizer=regularizers.l2()))\n",
+    "        else:\n",
+    "            model.add(Dense(hidden_nodes, activation='relu'))\n",
+    "\n",
+    "    model.add(Dense(46, activation='softmax'))\n",
+    "    model.compile(optimizer='rmsprop', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "    K.set_value(model.optimizer.learning_rate, learning_rate)\n",
+    "    history = model.fit(X_train, y_train, epochs=epochs, batch_size=512, validation_data=(X_val, y_val), verbose = 0)\n",
+    "\n",
+    "    val_loss = history.history['val_loss']\n",
+    "\n",
+    "    return val_loss\n",
+    "\n",
+    "if \"__main__\" == __name__:\n",
+    "\n",
+    "    # load data\n",
+    "    np_load_old = np.load\n",
+    "    np.load = lambda *a,**k: np_load_old(*a, allow_pickle=True, **k)\n",
+    "    (X_train, y_train), (X_test, y_test) = reuters.load_data(num_words=10000)\n",
+    "    word_index = reuters.get_word_index(path=\"reuters_word_index.json\")\n",
+    "    np.load = np_load_old\n",
+    "\n",
+    "    X_train = vectorize_sequences(X_train)\n",
+    "    X_test = vectorize_sequences(X_test)\n",
+    "    one_hot_y_train = to_categorical(y_train)\n",
+    "    one_hot_y_test = to_categorical(y_test)\n",
+    "\n",
+    "    X_val = X_train[:1000]\n",
+    "    partial_X_train = X_train[1000:]\n",
+    "    y_val = one_hot_y_train[:1000]\n",
+    "    partial_y_train = one_hot_y_train[1000:]\n",
+    "\n",
+    "    color = ['b', 'r', 'y', 'g', 'o']\n",
+    "\n",
+    "\n",
+    "    loss_baseline = trainModel(partial_X_train, partial_y_train, X_val, y_val, 1, 100, 0.001, 40, False, False)\n",
+    "    loss_dropout = trainModel(partial_X_train, partial_y_train, X_val, y_val, 1, 100, 0.001, 40, False, True)\n",
+    "    loss_l2 = trainModel(partial_X_train, partial_y_train, X_val, y_val, 1, 100, 0.001, 40, True, False)\n",
+    "    loss_both = trainModel(partial_X_train, partial_y_train, X_val, y_val, 1, 100, 0.001, 40, True, True)\n",
+    "\n",
+    "    plt.plot(range(1, 41), loss_baseline, 'b', label='Baseline')\n",
+    "    plt.plot(range(1, 41), loss_dropout, 'r', label='Dropout')\n",
+    "    plt.plot(range(1, 41), loss_l2, 'y', label='L2')\n",
+    "    plt.plot(range(1, 41), loss_both, 'g', label='L2 and Dropout')\n",
+    "\n",
+    "    plt.title('Training Loss vs Validation Loss')\n",
+    "    plt.xlabel('Epochs')\n",
+    "    plt.ylabel('Loss')\n",
+    "    plt.legend() \n",
+    "    plt.show() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
