got part2 roughly done and part3 working:

--- a/Assignments/A4/Part1.ipynb
+++ b/Assignments/A4/Part1.ipynb
@@ -354,11 +354,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Based on these results, Kmeans seems to be the best application with the above mentioned parameters for this particular application"
+   ]
   },
   {
    "cell_type": "markdown",
